# spatial_pedagogy_toolbox

./: CODEBASE.md  README.md  instructions.txt  main.py  pyproject.toml
calibration_tool/: README.md  analysis.py  app.py  controller.py  image.py  instructions.txt  model.py
data/: angled.csv  positions_class.csv  positions_square.csv
tests/: test_analysis.py  test_image.py  test_model.py
